# fizbuzz

./: .env.template  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
src/fizbuzz/: utils.py
src/fizbuzz/agents/: finance_agent.py
src/fizbuzz/examples/: yahoo_finance_tool.ipynb
src/fizbuzz/llms/: base.py  openai.py
src/fizbuzz/scripts/: test_agent.py
src/fizbuzz/tools/: yahoo_finance.py
src/fizbuzz/yahoo_finance_mcp/: __init__.py  __main__.py  functions.py  server.py  utils.py
