[tool.poetry]
name = "fizbuzz"
version = "0.1.0"
description = "An agentic ai workflow to track stocks and make better decisions"
authors = ["Sanidhya Mangal <mangalsanidhya19@gmail.com>"]
readme = "README.md"
packages = [{include="fizbuzz", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.54"
llama-index = "^0.12.19"
pandas = "^2.2.3"
llama-index-llms-ollama = "^0.5.2"
llama-index-llms-openai = "^0.3.20"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
