[project]
name = "fizbuzz"
version = "1.1.0"
description = "An AI agent to interact with the Yahoo Finance API end points to chat with stock data."
readme = "README.md"
requires-python = ">=3.10.5"
dependencies = [
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-tools-mcp>=0.1.3",
    "mcp[cli]>=1.9.0",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
    "yfinance>=0.2.61",
]

[project.scripts]
yf-mcp-server = "fizbuzz.yahoo_finance_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
